Update benchmarks/README.md
Co-authored-by: Robert Stupp <snazy@snazy.de>